[gd_scene load_steps=8 format=2]

[ext_resource path="res://common/health_over.png" type="Texture" id=1]
[ext_resource path="res://common/health_progress.png" type="Texture" id=2]
[ext_resource path="res://common/health_under.png" type="Texture" id=3]
[ext_resource path="res://common/Status_Bar.gd" type="Script" id=4]
[ext_resource path="res://common/CHILLER.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 20
outline_size = 2
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 20
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[node name="Status_Bar" type="Node2D"]
scale = Vector2( 2, 2 )
script = ExtResource( 4 )
health_high = Color( 0, 0.560784, 0, 1 )
health_low = Color( 1, 0, 0, 1 )

[node name="Health_Bar" type="TextureProgress" parent="."]
margin_top = -0.396851
margin_right = 100.0
margin_bottom = 9.60315
value = 100.0
texture_under = ExtResource( 3 )
texture_over = ExtResource( 1 )
texture_progress = ExtResource( 2 )
tint_progress = Color( 0, 0.560784, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Health_Label" type="Label" parent="."]
margin_left = 42.013
margin_top = -0.888817
margin_right = 70.013
margin_bottom = 23.1112
rect_scale = Vector2( 0.6, 0.6 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "60%"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Energy_Bar" type="TextureProgress" parent="."]
margin_top = 12.0
margin_right = 100.0
margin_bottom = 22.0
value = 100.0
texture_under = ExtResource( 3 )
texture_over = ExtResource( 1 )
texture_progress = ExtResource( 2 )
tint_progress = Color( 0.498039, 0.498039, 0.329412, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Energy_Label" type="Label" parent="."]
margin_left = 41.865
margin_top = 10.8757
margin_right = 58.865
margin_bottom = 34.8757
rect_scale = Vector2( 0.6, 0.6 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "60"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player_Icon" type="Sprite" parent="."]
position = Vector2( 105, 0 )
scale = Vector2( 0.208, 0.208 )
